<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">PlayNote</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
   <string name="nusuario">Usuario</string>
    <string name="contra">Password</string>
    <string name="Entrar">Entrar</string>
    <string name="descrip1"></string>
    <string name="Registrarse1">Registrarse</string>
    <string name="OK" >OK</string>
    <string name="correo"></string>
    <string name="Datos" >Datos</string>
     <string name="Personales" >Registre Datos Personales</string>

</resources>
