<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

     <TextView
         android:id="@+id/tvinfo2"
         android:layout_marginLeft="40dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         
         android:layout_marginTop="@dimen/dimenregistro"
         
        
         android:text="@string/Personales"
         android:textColor="#1E3359"
         android:textSize="20sp" />
 
    <TextView

        android:text="@string/nusuario"
        android:id="@+id/tv1"
         android:textColor="#1E3359"
        android:textSize="25sp"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" />
    
    
    <EditText
        android:layout_marginRight="@dimen/dimenedit"
        android:layout_marginLeft="@dimen/dimenedit"
        android:id="@+id/edtx1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F19A03"
        android:layout_toRightOf="@id/tv1"
        android:layout_centerVertical="true"
  android:inputType="text"

        />
    <TextView

        android:layout_marginTop="@dimen/dimenbutton"
        android:text="@string/contra"
        android:id="@+id/tv2"
        android:textSize="19sp"

        android:textColor="#1E3359"
        android:layout_width="30dp"
        android:layout_height="wrap_content"



        android:layout_below="@+id/tv1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/tv1"
        android:layout_alignEnd="@+id/tv1" />
    
    <EditText
      android:layout_marginLeft="@dimen/dimenedit"
      android:layout_marginRight="@dimen/dimenedit"
        android:id="@+id/edtx2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F19A03"
          android:layout_toRightOf="@+id/tv2"
        android:layout_toEndOf="@+id/tv2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/tv2"
        android:inputType="text" />

<Button
    android:id="@+id/btnOK"
    android:layout_marginTop="@dimen/dimenbutton"
    android:layout_width="80dp"
    android:layout_height="40dp"
    android:background="#1E3359"
    android:text="@string/OK"
    android:textColor="#ffffff"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/edtx2" />


</RelativeLayout>
